--- a/templates/default/dbinstance.inc.php.erb
+++ b/templates/default/dbinstance.inc.php.erb
@@ -13,8 +13,10 @@ $cfg['Servers'][$i]['compress'] = true;
 $cfg['Servers'][$i]['extension'] = 'mysqli';
 $cfg['Servers'][$i]['AllowNoPassword'] = false;
 
+<% unless @auth_type == 'cookie' %>
 $cfg['Servers'][$i]['user'] = '<%= @user %>';
 $cfg['Servers'][$i]['password'] = '<%= @pass %>';
+<% end %>
 <% if @hide_dbs %>
 $cfg['Servers'][$i]['hide_db'] = '^<%= @hide_dbs.join('|') %>$';
 <% end %>
